--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
     "cSpell.words": [
+        "Buceta",
+        "Chris",
         "conteudo",
         "dashed",
         "emoticom",
+        "Maryana",
         "Milton",
+        "Ryan",
         "saite",
         "wallpaper"
     ]
