--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,25 @@
 {
     "cSpell.words": [
+        "Alien",
+        "Batman",
         "Buceta",
         "Chris",
         "conteudo",
+        "Dangal",
         "dashed",
         "emoticom",
+        "Hero",
+        "Hulk",
+        "Inception",
         "Maryana",
+        "materia",
         "Milton",
+        "Oblivion",
+        "Oldboy",
         "Ryan",
         "saite",
-        "wallpaper"
+        "Story",
+        "wallpaper",
+        "Wars"
     ]
 }
