--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,14 @@
         "Alien",
         "Batman",
         "Buceta",
+        "cgrupo",
         "Chris",
+        "cnome",
         "conteudo",
         "Dangal",
         "dashed",
         "emoticom",
+        "Galaxy",
         "Hero",
         "Hulk",
         "Inception",
@@ -18,7 +21,9 @@
         "Oldboy",
         "Ryan",
         "saite",
+        "Station",
         "Story",
+        "Theater",
         "wallpaper",
         "Wars"
     ]
