--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Chris",
         "cnome",
         "conteudo",
+        "Cursoemvideo",
         "Dangal",
         "dashed",
         "emoticom",
