--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "Galaxy",
         "Hero",
         "Hulk",
+        "iframes",
         "Inception",
         "Maryana",
         "materia",
