--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "Oldboy",
         "Ryan",
         "saite",
+        "shortcut",
         "Station",
         "Story",
         "Theater",
