--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,11 +11,13 @@
         "Dangal",
         "dashed",
         "emoticom",
+        "frame",
         "Galaxy",
         "Hero",
         "Hulk",
         "iframes",
         "Inception",
+        "iphone",
         "Maryana",
         "materia",
         "Milton",
