--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,23 +6,35 @@
         "cgrupo",
         "Chris",
         "cnome",
+        "CONT",
         "conteudo",
         "Cursoemvideo",
         "Dangal",
         "dashed",
         "emoticom",
+        "esbas",
+        "esfut",
+        "esnat",
+        "esten",
         "frame",
         "Galaxy",
         "Hero",
         "Hulk",
+        "iano",
         "iframes",
+        "iidade",
         "Inception",
+        "inum",
         "iphone",
+        "isoma",
+        "ival",
+        "lstprof",
         "Maryana",
         "materia",
         "Milton",
         "Oblivion",
         "Oldboy",
+        "prof",
         "Ryan",
         "saite",
         "shortcut",
