--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "cnome",
         "CONT",
         "conteudo",
+        "cursoemvideo",
         "Cursoemvideo",
         "Dangal",
         "dashed",
@@ -37,6 +38,7 @@
         "prof",
         "Ryan",
         "saite",
+        "scree",
         "shortcut",
         "Station",
         "Story",
