--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "Cursoemvideo",
         "Dangal",
         "dashed",
+        "Desktops",
         "emoticom",
         "esbas",
         "esfut",
@@ -29,19 +30,25 @@
         "iphone",
         "isoma",
         "ival",
+        "laptops",
         "lstprof",
         "Maryana",
         "materia",
         "Milton",
         "Oblivion",
         "Oldboy",
+        "Pads",
         "prof",
         "Ryan",
         "saite",
         "scree",
+        "screens",
         "shortcut",
+        "smartphone",
         "Station",
         "Story",
+        "tablet",
+        "Tablets",
         "Theater",
         "wallpaper",
         "Wars"
