--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Alien",
         "Batman",
+        "Blink",
         "Buceta",
         "cgrupo",
         "Chris",
@@ -18,8 +19,10 @@
         "esfut",
         "esnat",
         "esten",
+        "formulario",
         "frame",
         "Galaxy",
+        "gradient",
         "Hero",
         "Hulk",
         "iano",
@@ -38,6 +41,7 @@
         "Oblivion",
         "Oldboy",
         "Pads",
+        "predio",
         "prof",
         "Ryan",
         "saite",
