--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Alien",
         "Batman",
         "Blink",
+        "botao",
         "Buceta",
         "cgrupo",
         "Chris",
@@ -55,6 +56,7 @@
         "Tablets",
         "Theater",
         "wallpaper",
-        "Wars"
+        "Wars",
+        "within"
     ]
 }
