--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "Dangal",
         "dashed",
         "Desktops",
+        "downward",
         "emoticom",
         "esbas",
         "esfut",
