--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "Chris",
         "cnome",
         "CONT",
+        "conteiner",
         "conteudo",
         "cursoemvideo",
         "Cursoemvideo",
