--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "frame",
         "Galaxy",
         "gradient",
+        "Hermanos",
         "Hero",
         "Hulk",
         "iano",
@@ -36,12 +37,18 @@
         "iphone",
         "isoma",
         "ival",
+        "KANYE",
+        "kanyewest",
+        "lanadelrey",
         "laptops",
+        "letterboxd",
         "lstprof",
         "Maryana",
         "materia",
         "Milton",
+        "Narinha",
         "Oblivion",
+        "odeiocolica",
         "Oldboy",
         "Pads",
         "predio",
@@ -56,9 +63,11 @@
         "Story",
         "tablet",
         "Tablets",
+        "taylorswift",
         "Theater",
         "wallpaper",
         "Wars",
-        "within"
+        "within",
+        "xuxu"
     ]
 }
