--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "cgrupo",
         "Chris",
         "cnome",
+        "Confirmed",
         "CONT",
         "conteiner",
         "conteudo",
@@ -61,6 +62,7 @@
         "smartphone",
         "Station",
         "Story",
+        "Swal",
         "tablet",
         "Tablets",
         "taylorswift",
