--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Blink",
         "botao",
         "Buceta",
+        "Bugdroid",
         "cgrupo",
         "Chris",
         "cnome",
@@ -25,6 +26,7 @@
         "esten",
         "formulario",
         "frame",
+        "Froyo",
         "Galaxy",
         "gradient",
         "Hermanos",
@@ -34,6 +36,7 @@
         "iframes",
         "iidade",
         "Inception",
+        "Inkscape",
         "inum",
         "iphone",
         "isoma",
@@ -43,10 +46,12 @@
         "lanadelrey",
         "laptops",
         "letterboxd",
+        "Lolipop",
         "lstprof",
         "Maryana",
         "materia",
         "Milton",
+        "Morrill",
         "Narinha",
         "Oblivion",
         "odeiocolica",
@@ -54,6 +59,7 @@
         "Pads",
         "predio",
         "prof",
+        "riando",
         "Ryan",
         "saite",
         "scree",
@@ -67,6 +73,8 @@
         "Tablets",
         "taylorswift",
         "Theater",
+        "Torrone",
+        "versoes",
         "wallpaper",
         "Wars",
         "within",
