--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Alien",
         "Batman",
         "Blink",
+        "blok",
         "botao",
         "Buceta",
         "Bugdroid",
@@ -15,6 +16,7 @@
         "conteudo",
         "cursoemvideo",
         "Cursoemvideo",
+        "Dandroids",
         "Dangal",
         "dashed",
         "Desktops",
